fixed image paths

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   </head>
   <body id="top">
     <header id="home">
-        <img class="bannerimg" src="/assets/media/banner.jpg" alt="banner" />
+        <img class="bannerimg" src="assets/media/banner.jpg" alt="banner" />
     </header>
     <main>
       <div class="extlinks">
@@ -38,7 +38,7 @@
           <a class="nav" href="#services">SERVICES</a>
           <a class="nav" href="#portfolio">PORTFOLIO</a>
           <a class="nav" href="#team">TEAM</a>
-          <a class="nav" href="/gallery.html">GALLERY</a>
+          <a class="nav" href="gallery.html">GALLERY</a>
           <a class="nav" href="#contact">CONTACT</a>
         </nav>
       </div>
@@ -83,42 +83,42 @@
           <div class="s1flex">
             <img
               class="portfolioimg"
-              src="/assets/media/portfolio/p1.jpg"
+              src="assets/media/portfolio/p1.jpg"
               alt="bicycle on street"
             />
             <img
               class="portfolioimg"
-              src="/assets/media/portfolio/p2.jpg"
+              src="assets/media/portfolio/p2.jpg"
               alt="boat"
             />
             <img
               class="portfolioimg"
-              src="/assets/media/portfolio/p3.jpg"
+              src="assets/media/portfolio/p3.jpg"
               alt="sea view of skyscrapers"
             />
             <img
               class="portfolioimg"
-              src="/assets/media/portfolio/p4.jpg"
+              src="assets/media/portfolio/p4.jpg"
               alt="kids tricycle"
             />
             <img
               class="portfolioimg"
-              src="/assets/media/portfolio/p5.jpg"
+              src="assets/media/portfolio/p5.jpg"
               alt="specs on laptop"
             />
             <img
               class="portfolioimg"
-              src="/assets/media/portfolio/p6.jpg"
+              src="assets/media/portfolio/p6.jpg"
               alt="yak"
             />
             <img
               class="portfolioimg"
-              src="/assets/media/portfolio/p7.jpg"
+              src="assets/media/portfolio/p7.jpg"
               alt="boats in a canal"
             />
             <img
               class="portfolioimg"
-              src="/assets/media/portfolio/p8.jpg"
+              src="assets/media/portfolio/p8.jpg"
               alt="railway track"
             />
           </div>
@@ -129,22 +129,22 @@
           <div class="s1flex">
             <img
               class="memberimg"
-              src="/assets/media/member1.jpg"
+              src="assets/media/member1.jpg"
               alt="member1"
             />
             <img
               class="memberimg"
-              src="/assets/media/member2.jpg"
+              src="assets/media/member2.jpg"
               alt="member2"
             />
             <img
               class="memberimg"
-              src="/assets/media/member3.jpg"
+              src="assets/media/member3.jpg"
               alt="member3"
             />
             <img
               class="memberimg"
-              src="/assets/media/member4.jpg"
+              src="assets/media/member4.jpg"
               alt="member4"
             />
           </div>
