--- a/gallery.html
+++ b/gallery.html
@@ -22,18 +22,18 @@
     <main>
       <section class="gallery">
         <div class="column">
-          <img class="galleryimg" src="/assets/media/gallery/01.jpg" alt="" />
-          <img class="galleryimg" src="/assets/media/gallery/02.jpg" alt="" />
-          <img class="galleryimg" src="/assets/media/gallery/07.jpg" alt="" />
-          <img class="galleryimg" src="/assets/media/gallery/04.jpg" alt="" />
-          <img class="galleryimg" src="/assets/media/gallery/05.jpg" alt="" />
+          <img class="galleryimg" src="assets/media/gallery/01.jpg" alt="" />
+          <img class="galleryimg" src="assets/media/gallery/02.jpg" alt="" />
+          <img class="galleryimg" src="assets/media/gallery/07.jpg" alt="" />
+          <img class="galleryimg" src="assets/media/gallery/04.jpg" alt="" />
+          <img class="galleryimg" src="assets/media/gallery/05.jpg" alt="" />
         </div>
         <div class="column">
-          <img class="galleryimg" src="/assets/media/gallery/06.jpg" alt="" />
-          <img class="galleryimg" src="/assets/media/gallery/03.jpg" alt="" />
-          <img class="galleryimg" src="/assets/media/gallery/08.jpg" alt="" />
-          <img class="galleryimg" src="/assets/media/gallery/09.jpg" alt="" />
-          <img class="galleryimg" src="/assets/media/gallery/10.jpg" alt="" />
+          <img class="galleryimg" src="assets/media/gallery/06.jpg" alt="" />
+          <img class="galleryimg" src="assets/media/gallery/03.jpg" alt="" />
+          <img class="galleryimg" src="assets/media/gallery/08.jpg" alt="" />
+          <img class="galleryimg" src="assets/media/gallery/09.jpg" alt="" />
+          <img class="galleryimg" src="assets/media/gallery/10.jpg" alt="" />
         </div>
       </section>
     </main>
